--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,14 @@ body {
   font-style: normal;
 }
 
+/* Disabled button */
+button:disabled,
+button[disabled]{
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -119,3 +127,4 @@ body {
     transform: rotate(360deg);
   }
 }
+
