--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,3 +1,7 @@
+.circle{
+    width: 70%;
+}
+
 /* Transition underline of menu header */
 .circle a {
     font-family: 'Roboto Condensed', sans-serif;
@@ -68,11 +72,15 @@
     cursor: pointer;
 }
 .header {
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
     background-color: #f5f5f5;
+    position: fixed;
+    z-index: 100;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
   }
 .header ul {
     list-style: none;
