--- a/src/components/UploadFile/uploadFile.module.css
+++ b/src/components/UploadFile/uploadFile.module.css
@@ -3,7 +3,6 @@
     width: 30%;
     border-radius: 24px;
     background-color: #e0e0e054;
-    /* filter: blur(10px); */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +19,7 @@ h3{
 .customButton {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #074173;
+    background-color: #074173b5;
     color: white;
     border: none;
     border-radius: 30px;
@@ -56,7 +55,7 @@ h3{
     color: #074173;
 }
 .predictBut{
-    background-color: #074173;
+    background-color: #074173b5;
     border-radius: 30px;
     width: 100%;
     border: none;
@@ -99,4 +98,17 @@ h3{
     display: flex;
     flex-direction: column;
     gap: 16px;
+}
+
+/* Hover  */
+.predictBut:hover {
+    background-color: #074173;
+    color: white;
+    transition: all 0.2s;
+}
+
+.customButton:hover {
+    background-color: #074173;
+    color: white;
+    transition: all 0.2s;
 }
