--- a/src/pages/Predict/predict.module.css
+++ b/src/pages/Predict/predict.module.css
@@ -1,6 +1,7 @@
 .container{
   max-width: 900px;
   margin: 60px auto;
+  padding-top: 10%;
 }
 .upload{
   display: flex;
@@ -8,9 +9,8 @@
 }
 .upload .resultSection{
   width: 70%;
-  height: fit-content;
+  /* height: fit-content; */
   border-radius: 24px;
-  /* filter: blur(10px); */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -63,4 +63,30 @@
 .warning{
   font-size: 12px;
   color: #959595;
+}
+
+/* No data */
+.nodata{
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column;
+}
+
+.nodata img{
+  width: 40%;
+}
+
+.nodata .noDataImg{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nodata h4{
+  color: #074173;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align: center;
 }
