--- a/src/components/ClientFeed/clientFeed.module.css
+++ b/src/components/ClientFeed/clientFeed.module.css
@@ -31,7 +31,7 @@
     width: 100%
 }
 .info span{
-    font-family: Roboto;
+    font-family: 'Sen';
     font-size: 16px;
     font-weight: 400;
     line-height: 25.6px;
