--- a/src/components/Prediction/prediction.module.css
+++ b/src/components/Prediction/prediction.module.css
@@ -19,7 +19,7 @@
     gap: 8px;
 }
 .content h4{
-    font-family: Poppins;
+    font-family: 'Sen';
     font-size: 20px;
     font-weight: 700;
     line-height: 32.4px;
@@ -33,7 +33,7 @@
     padding: 0 6px;
 }
 .content h1{
-    font-family: Poppins;
+    font-family: 'Sen';
     font-size: 28px;
     font-weight: 700;
     line-height: 52.8px;
@@ -49,6 +49,9 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+}
+.items p{
+    font-family: 'Sen';
 }
 .item{
     width: 80%;
