--- a/src/components/TitleText/titleText.module.css
+++ b/src/components/TitleText/titleText.module.css
@@ -17,12 +17,14 @@
     position: relative;
     z-index: 1;
     color: #4E5456;
+    padding: 0;
   }
   .text p {
     font-size: 1.5em;
     display: flex;
     justify-content: center;
+    margin: 0;
   }
 .text{
-    padding: 48px 0;
+    padding: 48px 0 32px 0;
 }
